--- a/app/Store/store.module.css
+++ b/app/Store/store.module.css
@@ -15,6 +15,7 @@
     cursor: pointer;
     transition: all .3s ease-in;
     color: #696969;
+    max-width: max-content;
 }
 
 .NFTCard_box:hover {
