--- a/app/Store/store.module.css
+++ b/app/Store/store.module.css
@@ -1,8 +1,8 @@
 .NFTCard {
     width: 80%;
     margin: 0 auto;
-    display: flex;
-    grid-template-columns: repeat(3, 1fr);
+    display: grid; /* Use grid display */
+    grid-template-columns: repeat(3, 1fr); /* Defines a 3-column grid */
     gap: 3rem;
     margin-bottom: 2rem;
 }
